orbifolds; asymmetric tutte

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,82 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-05-19 16:05:51 -0500 
+%% Created for Jeff Erickson at 2021-05-31 15:11:04 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{al-sote-17,
+	author = {Aigerman, Noam and Lipman, Yaron},
+	date-added = {2021-05-31 15:09:28 -0500},
+	date-modified = {2021-05-31 15:11:01 -0500},
+	doi = {10.1145/3072959.3073615},
+	journal = {ACM Trans. Graphics},
+	number = {4},
+	pages = {90:1--90:13},
+	title = {Spherical orbifold {Tutte} embeddings},
+	volume = {36},
+	year = {2017}}
+
+@article{al-hote-16,
+	author = {Aigerman, Noam and Lipman, Yaron},
+	date-added = {2021-05-31 15:07:42 -0500},
+	date-modified = {2021-05-31 15:10:42 -0500},
+	doi = {10.1145/2980179.2982412},
+	journal = {ACM Trans. Graphics},
+	number = {6},
+	pages = {217:1--217:14},
+	title = {Hyperbolic orbifold {Tutte} embeddings},
+	volume = {35},
+	year = {2016}}
+
+@article{al-ote-15,
+	author = {Aigerman, Noam and Lipman, Yaron},
+	date-added = {2021-05-31 15:01:39 -0500},
+	date-modified = {2021-05-31 15:09:04 -0500},
+	doi = {10.1145/2816795.2818099},
+	journal = {ACM Trans. Graphics},
+	number = {6},
+	pages = {190:1--190:12},
+	title = {Orbifold {Tutte} embeddings},
+	volume = {34},
+	year = {2015}}
+
+@misc{l-sgts-20,
+	arxiv = {1910.03070},
+	author = {Luo, Yanwen},
+	date-added = {2021-05-31 14:55:49 -0500},
+	date-modified = {2021-05-31 14:56:46 -0500},
+	howpublished = {Preprint},
+	month = {August},
+	title = {Spaces of geodesic triangulations of surfaces},
+	year = {2020}}
+
+@misc{lwz-dsgtg-21,
+	arxiv = {2105.00612},
+	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
+	comments = {asymmetric Tutte-Floater on hyperbolic surfaces},
+	date-added = {2021-05-31 14:51:22 -0500},
+	date-modified = {2021-05-31 14:53:23 -0500},
+	howpublished = {Preprint},
+	month = {May},
+	title = {The deformation space of geodesic triangulations and generalized {Tutte's} embedding theorem},
+	year = {2021}}
+
+@article{hs-seshm-15,
+	arxiv = {1206.2574},
+	author = {Hass, Joel and Scott, Peter},
+	date-added = {2021-05-31 14:40:53 -0500},
+	date-modified = {2021-05-31 14:48:56 -0500},
+	doi = {10.4310/AJM.2015.v19.n4.a2},
+	journal = {Asian Journal of Mathematics},
+	number = {4},
+	pages = {593--636},
+	title = {Simplicial energy and simplicial harmonic maps},
+	volume = {19},
+	year = {2015}}
 
 @inproceedings{chhs-prlhei-83,
 	author = {Connelly, Robert and Henderson, David W. and Ho, Chung Wu and Starbird, Michael},
@@ -31,7 +101,8 @@
 	pages = {161--175},
 	title = {The space of simplexwise linear homeomorphisms of a convex 2-disk},
 	volume = {23},
-	year = {1984}}
+	year = {1984},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0040-9383(84)90037-5}}
 
 @article{k-ugpdd-99,
 	author = {Kettner, Lutz},
@@ -1084,9 +1155,9 @@
 @article{ssc-vhm-19,
 	author = {Sharp, Nicholas and Soliman, Yousuf and Crane, Keenan},
 	date-added = {2020-08-28 13:01:58 -0500},
-	date-modified = {2020-08-28 13:02:11 -0500},
+	date-modified = {2021-05-31 15:02:47 -0500},
 	doi = {10.1145/3243651},
-	journal = {{ACM} Trans. Graph.},
+	journal = {{ACM} Trans. Graphics},
 	number = {3},
 	pages = {24:1--24:19},
 	title = {The Vector Heat Method},
@@ -1097,9 +1168,9 @@
 @article{ssc-nit-19,
 	author = {Sharp, Nicholas and Soliman, Yousuf and Crane, Keenan},
 	date-added = {2020-08-28 13:00:18 -0500},
-	date-modified = {2020-08-28 13:00:32 -0500},
+	date-modified = {2021-05-31 15:02:43 -0500},
 	doi = {10.1145/3306346.3322979},
-	journal = {{ACM} Trans. Graph.},
+	journal = {{ACM} Trans. Graphics},
 	number = {4},
 	pages = {55:1--55:16},
 	title = {Navigating intrinsic triangulations},
@@ -4838,14 +4909,14 @@
 	author = {Lovász, László},
 	booktitle = {Eigenvalues of Laplacians and other geometric operators},
 	date-added = {2019-03-11 13:42:10 +0100},
-	date-modified = {2019-03-11 13:44:56 +0100},
+	date-modified = {2021-05-31 14:51:06 -0500},
 	doi = {10.4310/SDG.2004.v9.n1.a7},
 	editor = {Grigor’yan, Alexander and Yau, Shing-Tung},
+	number = {9},
 	pages = {241--273},
 	publisher = {Int. Press},
 	series = {Surveys in Differential Geometry},
 	title = {Discrete analytic functions: An exposition},
-	volume = {9},
 	year = {2004},
 	Bdsk-Url-1 = {https://doi.org/10.4310/SDG.2004.v9.n1.a7}}
 
@@ -9935,7 +10006,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	pages = {205--222},
 	title = {Linear isotopies in {$E^2$}},
 	volume = {237},
-	year = {1978}}
+	year = {1978},
+	Bdsk-Url-1 = {https://doi.org/10.2307/1997619}}
 
 @article{d-uzrr-1903,
 	author = {Dehn, Max},
@@ -10016,8 +10088,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	arxiv = {math.GT/0604476},
 	author = {Purcell, Jessica S.},
 	date-added = {2012-12-03 04:43:02 +0000},
-	date-modified = {2012-12-03 04:44:56 +0000},
-	journal = {Alg. \& Geom. Top.},
+	date-modified = {2021-05-31 15:04:26 -0500},
+	journal = {Algebr. Geom. Topol.},
 	pages = {93--108},
 	read = {1},
 	title = {Volumes of highly twisted knots and links},
@@ -14414,8 +14486,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{p-mff-1883,
 	author = {Poincaré, Henri},
 	date-added = {2012-01-26 14:52:11 +0000},
-	date-modified = {2012-01-26 14:52:53 +0000},
-	journal = {Acta Mathematica},
+	date-modified = {2021-05-31 15:03:38 -0500},
+	journal = {Acta Math.},
 	pages = {192--294},
 	title = {Mémoire sur les fonctions fschiennes},
 	volume = {1},
@@ -14656,8 +14728,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{mh-dcmft-47,
 	author = {Morse, Marston and Heins, Maurice},
 	date-added = {2012-01-07 13:56:07 +0000},
-	date-modified = {2012-01-07 14:33:53 +0000},
-	journal = {Acta Mathematica},
+	date-modified = {2021-05-31 15:03:42 -0500},
+	journal = {Acta Math.},
 	number = {1},
 	pages = {53--103},
 	read = {1},
@@ -15617,8 +15689,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{t-ctafb-61,
 	author = {Titus, Charles J.},
 	date-added = {2011-12-07 12:35:46 +0000},
-	date-modified = {2012-01-06 21:49:17 +0000},
-	journal = {Acta Mathematica},
+	date-modified = {2021-05-31 15:03:35 -0500},
+	journal = {Acta Math.},
 	pages = {45--64},
 	read = {1},
 	title = {The combinatorial topology of analytic functions on the boundary of a disk},
@@ -17151,8 +17223,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{d-ga-38,
 	author = {Dehn, Max},
 	date-added = {2011-07-10 21:37:19 -0500},
-	date-modified = {2012-03-25 21:56:44 +0000},
-	journal = {Acta Mathematica},
+	date-modified = {2021-05-31 15:04:03 -0500},
+	journal = {Acta Math.},
 	keywords = {mapping class group, Dehn-Thurston coordinates},
 	pages = {135--206},
 	read = {1},
@@ -20694,8 +20766,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{h-tnik-61,
 	author = {Haken, Wolfgang},
 	date-added = {2009-11-01 17:32:58 -0600},
-	date-modified = {2009-11-01 17:36:24 -0600},
-	journal = {Acta Mathematica},
+	date-modified = {2021-05-31 15:03:54 -0500},
+	journal = {Acta Math.},
 	pages = {245--375},
 	title = {Theorie der {Normalflächen}: {Ein} {Isotopiekriterium} für den {Kreisknoten}},
 	volume = {105},
@@ -21375,8 +21447,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{h-chaw-99,
 	author = {Håstad, Johan},
 	date-added = {2009-10-21 17:23:49 -0500},
-	date-modified = {2011-12-14 16:22:53 +0000},
-	journal = {Acta Mathematica},
+	date-modified = {2021-05-31 15:03:45 -0500},
+	journal = {Acta Math.},
 	number = {1},
 	pages = {105--142},
 	read = {1},
@@ -22837,9 +22909,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	author = {Epstein, David B. A.},
 	comments = {simple contractible cycle bounds a disk; similar homotopic cycles bound an annulus},
 	date-added = {2008-11-24 13:20:54 -0600},
-	date-modified = {2019-03-22 13:12:02 +0100},
+	date-modified = {2021-05-31 15:03:57 -0500},
 	doi = {10.1007/BF02392203},
-	journal = {Acta Mathematica},
+	journal = {Acta Math.},
 	pages = {83--107},
 	read = {1},
 	title = {Curves on 2-manifolds and isotopies},
